Fix build errors

--- a/astar_planner/package.xml
+++ b/astar_planner/package.xml
@@ -13,9 +13,9 @@
     <depend>cv_bridge</depend>
     <depend>eigen</depend>
     <depend>geometry_msgs</depend>
+    <depend>libopencv-dev</depend>
     <depend>nav_msgs</depend>
     <depend>navigation_interface</depend>
-    <depend>opencv3</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
     <depend>tf2_ros</depend>
