--- a/hd_map/CMakeLists.txt
+++ b/hd_map/CMakeLists.txt
@@ -9,7 +9,9 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(FILES
     Map.msg
+    MapInfo.msg
     Marker.msg
+    OccupancyGridCompressed.msg
     Zone.msg
 )
 
