--- a/modular_move_base/test/move_base.yaml
+++ b/modular_move_base/test/move_base.yaml
@@ -2,32 +2,25 @@ path_planner: "astar_planner/AStarPlanner"
 trajectory_planner: "sim_band_planner/SimBandPlanner"
 controller: "pure_pursuit_controller/PurePursuitController"
 
-path_planner_frequency: 1.0
+path_planner_frequency: 0.5
 trajectory_planner_frequency: 8.0
 controller_frequency: 10.0
 
 AStarPlanner:
     debug_viz: true
-    neutral_cost: 0.1
-    robot_radius: 0.6
+    neutral_cost: 0.4
+    robot_radius: 0.5
     exponential_weight: 2.0
-    down_sample: 4
+    down_sample: 1
 
 SimBandPlanner:
     debug_viz: true
-    desired_speed: 0.2
+    robot_radius: 0.5
+    desired_speed: 0.15
     spline: true
 
 PurePursuitController:
-    max_velocity_x: 0.22
-    max_velocity_y: 0.22
-    max_velocity_w: 0.22
-    max_acceleration_x: 0.10
-    max_acceleration_y: 0.10
-    max_acceleration_w: 0.10
-    goal_radius: 0.1
-    xy_goal_tolerance: 0.002
-    yaw_goal_tolerance: 0.01
+    look_ahead: 0.1
 
 costmap:
 
@@ -36,7 +29,7 @@ costmap:
     - {name: sonar_data, type: 'gridmap::ObstacleLayer'}
 
   base_map:
-    lethal_threshold: 100
+    lethal_threshold: 50
 
   laser_data:
     data_sources:
