Update test files Add .rosinstall for `modular_cartographer`

--- a/modular_move_base/test/move_base.yaml
+++ b/modular_move_base/test/move_base.yaml
@@ -32,6 +32,8 @@ costmap:
     lethal_threshold: 50
 
   laser_data:
+    time_decay: true
+    time_decay_frequency: 0.25
     data_sources:
       - {name: laser, type: 'gridmap::LaserData'}
     laser:
