--- a/omni_rrt_planner/package.xml
+++ b/omni_rrt_planner/package.xml
@@ -19,6 +19,7 @@
     <depend>roscpp</depend>
     <depend>ompl</depend>
     <depend>rviz_visual_tools</depend>
+    <depend>sim_band_planner</depend>
 
     <export>
         <navigation_interface plugin="${prefix}/plugin.xml"/>
