--- a/sim_band_planner/plugin.xml
+++ b/sim_band_planner/plugin.xml
@@ -1,4 +1,4 @@
-<library path="lib/libsim_band_planner">
+<library path="lib/libsim_band_planner_plugin">
     <class name="sim_band_planner/SimBandPlanner" type="sim_band_planner::SimBandPlanner"
            base_class_type="navigation_interface::TrajectoryPlanner">
         <description>
