--- a/astar_planner/package.xml
+++ b/astar_planner/package.xml
@@ -9,17 +9,18 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
-    <depend>gridmap</depend>
     <depend>cv_bridge</depend>
     <depend>eigen</depend>
     <depend>geometry_msgs</depend>
+    <depend>gridmap</depend>
+    <depend>hd_map</depend>
     <depend>libopencv-dev</depend>
     <depend>nav_msgs</depend>
     <depend>navigation_interface</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
     <depend>tf2_ros</depend>
-    <depend>hd_map</depend>
+    <depend>visualization_msgs</depend>
 
     <test_depend>rosunit</test_depend>
 
