--- a/modular_move_base/test/move_base.yaml
+++ b/modular_move_base/test/move_base.yaml
@@ -1,5 +1,5 @@
-#path_planner: "astar_planner/AStarPlanner"
-path_planner: "omni_rrt_planner/OmniRRTPlanner"
+path_planner: "astar_planner/AStarPlanner"
+#path_planner: "omni_rrt_planner/OmniRRTPlanner"
 trajectory_planner: "sim_band_planner/SimBandPlanner"
 controller: "pure_pursuit_controller/PurePursuitController"
 
@@ -8,20 +8,16 @@ trajectory_planner_frequency: 8.0
 controller_frequency: 10.0
 
 OmniRRTPlanner:
-    robot_radius: 0.420
+    robot_radius: 0.210
 
 AStarPlanner:
     debug_viz: true
-    neutral_cost: 0.4
-    robot_radius: 0.5
-    exponential_weight: 2.0
-    down_sample: 1
 
 SimBandPlanner:
     debug_viz: true
-    robot_radius: 0.420
+    robot_radius: 0.210
     desired_speed: 0.15
-    spline: true
+    spline: false
 
 PurePursuitController:
     look_ahead: 0.1
@@ -30,7 +26,8 @@ costmap:
 
   layers:
     - {name: laser_data, type: 'gridmap::ObstacleLayer'}
-    - {name: sonar_data, type: 'gridmap::ObstacleLayer'}
+#    - {name: sonar_data, type: 'gridmap::ObstacleLayer'}
+    - {name: realsense_data, type: 'gridmap::ObstacleLayer'}
 
   base_map:
     lethal_threshold: 50
@@ -59,3 +56,10 @@ costmap:
       - {name: sonar_10, type: 'gridmap::RangeData'}
       - {name: sonar_11, type: 'gridmap::RangeData'}
       - {name: sonar_12, type: 'gridmap::RangeData'}
+
+  realsense_data:
+    data_sources:
+      - {name: realsense_front, type: 'gridmap::PointCloudData'}
+      - {name: realsense_back, type: 'gridmap::PointCloudData'}
+      - {name: realsense_left, type: 'gridmap::PointCloudData'}
+      - {name: realsense_right, type: 'gridmap::PointCloudData'}
