--- a/sim_band_planner/package.xml
+++ b/sim_band_planner/package.xml
@@ -15,7 +15,7 @@
     <depend>navigation_interface</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
-    <depend>rviz_visual_tools</depend>
+    <depend>visualization_msgs</depend>
     <depend>tf2_geometry_msgs</depend>
     <depend>tf2_ros</depend>
 
