--- a/gridmap/package.xml
+++ b/gridmap/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
     <name>gridmap</name>
     <version>0.1.0</version>
-    <description>C++ implementation of a probability gridmap</description>
+    <description>Probability Gridmap</description>
     <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
     <author>Boeing</author>
     <license>Boeing Proprietary</license>
@@ -10,7 +10,6 @@
     <buildtool_depend>catkin</buildtool_depend>
 
     <build_depend>cmake_modules</build_depend>
-    <build_depend>message_generation</build_depend>
 
     <depend>cv_bridge</depend>
     <depend>geometry_msgs</depend>
