Add script to template an SDF world from a DXF drawing

--- a/map_manager/CMakeLists.txt
+++ b/map_manager/CMakeLists.txt
@@ -47,6 +47,7 @@ catkin_install_python(
     scripts/${PROJECT_NAME}_node.py
     scripts/save_cartographer_map.py
     scripts/save_gmapping_map.py
+    scripts/template_world.py
     DESTINATION
     ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
