--- a/astar_planner/CMakeLists.txt
+++ b/astar_planner/CMakeLists.txt
@@ -57,6 +57,7 @@ add_library(${PROJECT_NAME}
     src/costmap.cpp
     src/node.cpp
     src/plugin.cpp
+    src/visualisation.cpp
 )
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
