--- a/gridmap/package.xml
+++ b/gridmap/package.xml
@@ -14,6 +14,7 @@
     <depend>cv_bridge</depend>
     <depend>geometry_msgs</depend>
     <depend>hd_map</depend>
+    <depend>image_geometry</depend>
     <depend>laser_geometry</depend>
     <depend>map_msgs</depend>
     <depend>message_filters</depend>
