Performance Improvements - Add compressed depth obstacle data source - Unsubscribe from data when not localised - Remove TF buffer and replace with an odom+localisation tracker - Clear map when switching localisation - Update map in blocks for time decay to minimise bulk IO

--- a/autonomy/package.xml
+++ b/autonomy/package.xml
@@ -22,6 +22,7 @@
     <depend>std_srvs</depend>
     <depend>tf2_geometry_msgs</depend>
     <depend>tf2_ros</depend>
+    <depend>yaml-cpp</depend>
 
     <depend>actionlib_msgs</depend>
 
