Convert URI of image mask into path

--- a/gridmap/CMakeLists.txt
+++ b/gridmap/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
     nav_msgs
     pluginlib
     roscpp
+    rospack
     sensor_msgs
     std_msgs
     tf2_geometry_msgs
