--- a/gridmap/package.xml
+++ b/gridmap/package.xml
@@ -22,6 +22,7 @@
     <depend>nav_msgs</depend>
     <depend>pluginlib</depend>
     <depend>roscpp</depend>
+    <depend>rospack</depend>
     <depend>sensor_msgs</depend>
     <depend>std_msgs</depend>
     <depend>tf2_geometry_msgs</depend>
