--- a/astar_planner/CMakeLists.txt
+++ b/astar_planner/CMakeLists.txt
@@ -3,8 +3,32 @@ project(astar_planner)
 
 add_definitions(-std=c++14)
 
-find_package(catkin REQUIRED
-  COMPONENTS
+find_package(
+    catkin REQUIRED
+    COMPONENTS
+        cv_bridge
+        geometry_msgs
+        gridmap
+        hd_map
+        nav_msgs
+        navigation_interface
+        pluginlib
+        roscpp
+        tf2_ros
+        visualization_msgs
+)
+
+find_package(OpenCV 3 REQUIRED)
+
+find_package(Eigen3 REQUIRED)
+add_definitions(${EIGEN3_DEFINITIONS})
+
+catkin_package(
+    INCLUDE_DIRS
+    include
+    LIBRARIES
+    ${PROJECT_NAME}
+    CATKIN_DEPENDS
     cv_bridge
     geometry_msgs
     gridmap
@@ -15,50 +39,16 @@ find_package(catkin REQUIRED
     roscpp
     tf2_ros
     visualization_msgs
+    DEPENDS
+    EIGEN3
+    OpenCV
 )
 
-find_package(OpenCV 3 REQUIRED)
+include_directories(SYSTEM ${catkin_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS})
 
-find_package(Eigen3 REQUIRED)
-add_definitions(${EIGEN3_DEFINITIONS})
+include_directories(include)
 
-catkin_package(
-  INCLUDE_DIRS
-      include
-  LIBRARIES
-      ${PROJECT_NAME}
-  CATKIN_DEPENDS
-      cv_bridge
-      geometry_msgs
-      gridmap
-      hd_map
-      nav_msgs
-      navigation_interface
-      pluginlib
-      roscpp
-      tf2_ros
-      visualization_msgs
-  DEPENDS
-      EIGEN3
-      OpenCV
-)
-
-include_directories(SYSTEM
-    ${catkin_INCLUDE_DIRS}
-    ${EIGEN3_INCLUDE_DIRS}
-)
-
-include_directories(
-    include
-)
-
-add_library(${PROJECT_NAME}
-    src/astar.cpp
-    src/costmap.cpp
-    src/node.cpp
-    src/plugin.cpp
-    src/visualisation.cpp
-)
+add_library(${PROJECT_NAME} src/astar.cpp src/costmap.cpp src/node.cpp src/plugin.cpp src/visualisation.cpp)
 
 add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
@@ -70,17 +60,17 @@ if(CATKIN_ENABLE_TESTING)
     target_link_libraries(unit_test ${PROJECT_NAME} ${OpenCV_LIBRARIES})
 endif()
 
-install(TARGETS ${PROJECT_NAME}
+install(
+    TARGETS ${PROJECT_NAME}
     ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-install(DIRECTORY include/${PROJECT_NAME}/
+install(
+    DIRECTORY include/${PROJECT_NAME}/
     DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
     PATTERN ".svn" EXCLUDE
 )
 
-install(FILES plugin.xml
-    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+install(FILES plugin.xml DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
