--- a/hd_map/CMakeLists.txt
+++ b/hd_map/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(hd_map)
 
-find_package(catkin REQUIRED COMPONENTS
-    geometry_msgs
-    message_generation
-    nav_msgs
-)
+find_package(catkin REQUIRED COMPONENTS geometry_msgs message_generation nav_msgs)
 
-add_message_files(FILES
+add_message_files(
+    FILES
     Map.msg
     MapInfo.msg
     Marker.msg
@@ -16,15 +13,6 @@ add_message_files(FILES
     Zone.msg
 )
 
-generate_messages(
-    DEPENDENCIES
-        geometry_msgs
-        nav_msgs
-)
+generate_messages(DEPENDENCIES geometry_msgs nav_msgs)
 
-catkin_package(
-    CATKIN_DEPENDS
-        geometry_msgs
-        message_runtime
-        nav_msgs
-)
+catkin_package(CATKIN_DEPENDS geometry_msgs message_runtime nav_msgs)
