Remove dependency on compressed_depth_image_transport

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 include:
   - project: robotics/continuous_integration
-    file: /pipelines/.ros-pkg-ci.yml
+    file: /pipelines/.ros-noetic-pkg-ci.yml
 
 catkin_run_tests:
   services:
