--- a/map_manager/package.xml
+++ b/map_manager/package.xml
@@ -20,7 +20,7 @@
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>python-blinker</exec_depend>
     <exec_depend>python3-ezdxf</exec_depend>
-    <exec_depend>python3-flask</exec_depend>
+    <exec_depend>python-flask</exec_depend>
     <exec_depend>python3-matplotlib</exec_depend>
     <exec_depend>python-mongoengine</exec_depend>
     <exec_depend>python3-networkx</exec_depend>
