Port to ros2 map_manager graph_map WIP

--- a/map_manager/CMakeLists.txt
+++ b/map_manager/CMakeLists.txt
@@ -1,45 +1,23 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.8)
+set(CMAKE_CXX_STANDARD 14)
+#cmake_minimum_required(VERSION 3.0.2)
 project(map_manager)
 
-find_package(catkin REQUIRED COMPONENTS geometry_msgs graph_map message_generation nav_msgs sensor_msgs)
+find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+#find_package(rosidl_default_generators REQUIRED)
 
-catkin_python_setup()
+# Package deps
+find_package(geometry_msgs REQUIRED)
+find_package(graph_map REQUIRED)
+find_package(nav_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
-add_message_files(FILES MapInfo.msg)
+#ament_python_install_package()
 
-add_service_files(
-    FILES
-    AddMap.srv
-    DeleteMap.srv
-    GetActiveMap.srv
-    GetAreaTree.srv
-    GetMapInfo.srv
-    GetNodeGraph.srv
-    GetOccupancyGrid.srv
-    GetZones.srv
-    ListMaps.srv
-    SetActiveMap.srv
-)
+#if (BUILD_TESTING)
+#    find_package(ament_cmake_gtest REQUIRED)
+#    ament_add_gtest(src/${PROJECT_NAME}/test/test_manager.test)
+#endif()
 
-generate_messages(DEPENDENCIES geometry_msgs graph_map nav_msgs sensor_msgs)
-
-catkin_package(CATKIN_DEPENDS geometry_msgs graph_map message_runtime nav_msgs sensor_msgs)
-
-catkin_install_python(
-    PROGRAMS
-    scripts/download_pbstream.py
-    scripts/${PROJECT_NAME}_node.py
-    scripts/process_dxf.py
-    scripts/save_cartographer_map.py
-    scripts/save_gmapping_map.py
-    scripts/template_world.py
-    scripts/upload_map.py
-    DESTINATION
-    ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
-
-if(CATKIN_ENABLE_TESTING)
-    find_package(rostest REQUIRED)
-    catkin_add_nosetests(src/${PROJECT_NAME}/dxf/test)
-    add_rostest(test/test_manager.test)
-endif()
+ament_package()
