--- a/graph_map/CMakeLists.txt
+++ b/graph_map/CMakeLists.txt
@@ -1,23 +1,21 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.8)
+set(CMAKE_CXX_STANDARD 14)
 project(graph_map)
 
-find_package(catkin REQUIRED COMPONENTS geometry_msgs message_generation std_msgs)
+find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
-catkin_python_setup()
+# Package deps
+find_package(geometry_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
+#find_package(message_runtime REQUIRED)
 
-add_message_files(FILES Region.msg Zone.msg)
+# Msg packages
+rosidl_generate_interfaces(${PROJECT_NAME}
+  msg/Region.msg
+  msg/Zone.msg
+  DEPENDENCIES std_msgs
+)
 
-# add_service_files(FILES )
-
-generate_messages(DEPENDENCIES geometry_msgs std_msgs)
-
-catkin_package(CATKIN_DEPENDS geometry_msgs message_runtime std_msgs)
-
-# catkin_install_python( PROGRAMS test/test_area.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION} )
-
-include_directories(${catkin_INCLUDE_DIRS})
-
-if(CATKIN_ENABLE_TESTING)
-    find_package(rostest REQUIRED)
-    catkin_add_nosetests(src/${PROJECT_NAME}/test)
-endif()
+ament_package()
