--- a/graph_map/package.xml
+++ b/graph_map/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
     <name>graph_map</name>
     <description>graph_map</description>
     <version>0.1.0</version>
@@ -8,16 +8,23 @@
     <author>Leng Vongchahn</author>
     <license>Boeing Proprietary</license>
 
-    <buildtool_depend>catkin</buildtool_depend>
+    <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>ament_cmake_python</buildtool_depend>
+    <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
     <depend>nav_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
-    <depend>message_generation</depend>
+    <!--<depend>message_generation</depend>--> 
 
+    <exec_depend>rosidl_default_runtime</exec_depend>
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>python3-shapely</exec_depend>
     <exec_depend>python3-matplotlib</exec_depend>
 
-    <test_depend>rostest</test_depend>
+    <member_of_group>rosidl_interface_packages</member_of_group>
+
+    <export>
+        <build_type>ament_cmake</build_type>
+    </export>
 </package>
