--- a/map_manager/package.xml
+++ b/map_manager/package.xml
@@ -7,15 +7,19 @@
     <author>Phillip Haeusler</author>
     <license>Boeing Proprietary</license>
 
-    <buildtool_depend>catkin</buildtool_depend>
+    <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>ament_cmake_python</buildtool_depend>
+    <!--<buildtool_depend>rosidl_default_generators</buildtool_depend>-->
 
     <depend>geometry_msgs</depend>
     <depend>graph_map</depend>
-    <depend>message_generation</depend>
+    <!--<depend>message_generation</depend>-->
     <depend>nav_msgs</depend>
     <depend>sensor_msgs</depend>
     <depend>python-types-requests</depend>
+    <depend>std_msgs</depend>
 
+    <!--<exec_depend>rosidl_default_runtime</exec_depend>-->
     <exec_depend>math6d</exec_depend>
     <exec_depend>message_runtime</exec_depend>
     <exec_depend>python-blinker</exec_depend>
@@ -29,9 +33,13 @@
     <exec_depend>python3-requests</exec_depend>
     <exec_depend>python-typing</exec_depend>
     <exec_depend>rospy</exec_depend>
-    <exec_depend>std_msgs</exec_depend>
     <exec_depend>tf2_msgs</exec_depend>
     <exec_depend>tf2_ros</exec_depend>
 
-    <test_depend>rostest</test_depend>
+    <test_depend>ament_cmake_gtest</test_depend>
+
+    <export>
+        <build_type>ament_cmake</build_type>
+    </export>
+
 </package>
