--- a/graph_map/package.xml
+++ b/graph_map/package.xml
@@ -10,12 +10,11 @@
 
     <buildtool_depend>ament_cmake</buildtool_depend>
     <buildtool_depend>ament_cmake_python</buildtool_depend>
-    <buildtool_depend>rosidl_default_generators</buildtool_depend>
+    <buildtool_depend>rosidl_default_generators</buildtool_depend>    
 
-    <depend>nav_msgs</depend>
-    <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
-    <!--<depend>message_generation</depend>--> 
+    <!--<depend>nav_msgs</depend>-->
+    <depend>geometry_msgs</depend>
 
     <exec_depend>rosidl_default_runtime</exec_depend>
     <exec_depend>message_runtime</exec_depend>
@@ -28,3 +27,4 @@
         <build_type>ament_cmake</build_type>
     </export>
 </package>
+ 
