--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,4 @@
+---
 include:
-  - project: robotics/continuous_integration
-    file: /pipelines/.ros-noetic-pkg-ci.yml
-
-catkin_run_tests:
-  services:
-    - name: sres.web.boeing.com:5000/mongo:3.6.23
-      alias: mongo
-  variables:
-    MONGO_HOST: mongo
-    MONGO_PORT: 27017
+  - project: mtdi/pi9419/continuous-integration
+    file: ci-templates/auto-rules/with-rosinstall/galactic-default.yml
