--- a/sim_band_planner/package.xml
+++ b/sim_band_planner/package.xml
@@ -7,24 +7,31 @@
     <author>Boeing</author>
     <license>Boeing Proprietary</license>
 
-    <buildtool_depend>catkin</buildtool_depend>
+    <!--<buildtool_depend>catkin</buildtool_depend>-->
+    <buildtool_depend>ament_cmake</buildtool_depend>
 
     <depend>geometry_msgs</depend>
     <depend>gridmap</depend>
     <depend>nav_msgs</depend>
     <depend>navigation_interface</depend>
     <depend>pluginlib</depend>
-    <depend>roscpp</depend>
     <depend>visualization_msgs</depend>
     <depend>tf2_geometry_msgs</depend>
     <depend>tf2_ros</depend>
+    <depend>map_manager</depend>
+    <depend>cartographer_ros_msgs</depend>
 
-    <test_depend>rosunit</test_depend>
+    <!--<test_depend>rosunit</test_depend>
 
-    <test_depend>rosunit</test_depend>
+    <test_depend>rosunit</test_depend>-->
 
+    <!--
+    Plugin export in ROS2 is done through the CMakeLists
     <export>
         <navigation_interface plugin="${prefix}/plugin.xml"/>
     </export>
-
+    -->
+    <export>
+        <build_type>ament_cmake</build_type>
+    </export>
 </package>
